--- a/contact.html
+++ b/contact.html
@@ -80,19 +80,17 @@
           <div class="form_container">
             <div class="heading_container">
               <h2>
-                Contact opnemen
+                Contact
               </h2>
             </div>
-      Contact opnemen voor meer informatie of een proefles? Bel ‭06 38 65 84 11‬ of stuur een mail naar gerardbiersteker@hotmail.com.
+            
+            <p> Contact opnemen voor meer informatie of een proefles? <br> Bel <b>06 38 65 84 11‬ </b> of stuur een mail naar <a style="color: black; font-weight: bold;" href="mailto:info@gerardbiersteker.nl">info@gerardbiersteker.nl</a></p>
+            <p>De lessen vinden plaats in mijn thuisstudio:</p>
+            <p>Kraagbeer 3<br>
+            1704 TW Heerhugowaard</p>
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="map_container">
-            <div class="map">
-              <div id="googleMap"></div>
-            </div>
-          </div>
-        </div>
+       <iframe title="kaart" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4840.194307749121!2d4.806816077692822!3d52.658222725985524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47cf5682d9de5843%3A0x820c800c80f83d61!2sKraagbeer%203%2C%201704%20TW%20Heerhugowaard%2C%20Niederlande!5e0!3m2!1sde!2sde!4v1738765627024!5m2!1sde!2sde" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
   </section>
@@ -105,19 +103,19 @@
       <div class="contact_nav">
         <a href="">
           <i class="fa fa-phone" aria-hidden="true"></i>
-          <span>
-            <p></p>Telefoon : <br> 06 38 65 84 11‬
+          <p></p><span>
+            Telefoon : <br> 06 38 65 84 11‬
           </span>
         </a>
-        <a href="">
+        <a href="mailto:info@gerardbiersteker.nl">
           <i class="fa fa-envelope" aria-hidden="true"></i>
-          <span><p></p>E-Mail:<br>
-            gerardbiersteker@hotmail.com
+          <p></p><span>E-Mail:<br>
+            info@gerardbiersteker.nl
           </span>
         </a>
-        <a href="">
+        <a href="contact.html">
           <i class="fa fa-map-marker" aria-hidden="true"></i>
-          <span><p></p>
+          <p></p><span>
             Locatie: <br>Kraagbeer 3, 1704 TW Heerhugwoaard
           </span>
         </a>
