--- a/index.html
+++ b/index.html
@@ -107,27 +107,27 @@
   <!-- end about section -->
 
 
-  <!-- info section -->
+   <!-- info section -->
   <section class="info_section long_section">
 
     <div class="container">
       <div class="contact_nav">
         <a href="">
           <i class="fa fa-phone" aria-hidden="true"></i>
-          <span>
-            Telefoon : 06 38 65 84 11‬
+          <p></p><span>
+            Telefoon : <br> 06 38 65 84 11‬
           </span>
         </a>
-        <a href="">
+        <a href="mailto:info@gerardbiersteker.nl">
           <i class="fa fa-envelope" aria-hidden="true"></i>
-          <span>
-            Email : demo@gmail.com
+          <p></p><span>E-Mail:<br>
+            info@gerardbiersteker.nl
           </span>
         </a>
-        <a href="">
+        <a href="contact.html">
           <i class="fa fa-map-marker" aria-hidden="true"></i>
-          <span>
-            Locatie
+          <p></p><span>
+            Locatie: <br>Kraagbeer 3, 1704 TW Heerhugwoaard
           </span>
         </a>
       </div>
@@ -158,7 +158,7 @@
   <!-- Google Map -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
   <!-- End Google Map -->
-
+  </div>
 </body>
 
 </html>
