--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 
   <div class="hero_area">
     <!-- header section strats -->
-        <header class="header_section long_section px-0">
+    <header class="header_section long_section px-0">
       <nav class="navbar navbar-expand-lg custom_nav-container ">
         <a class="navbar-brand" href="index.html">
           <span>
@@ -50,7 +50,7 @@
           <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
             <ul class="navbar-nav  ">
               <li class="nav-item ">
-                <a class="nav-link" href="index.html">Biografie<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">Over Gerard<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="bas.html"> Basgitaarles</a>
