--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
 
 <body>
 
-  <div class="hero_area">
     <!-- header section strats -->
-      <header class="header_section long_section px-0">
+    <header class="header_section long_section px-0">
       <nav class="navbar navbar-expand-lg custom_nav-container ">
         <a class="navbar-brand" href="index.html">
           <span>
@@ -50,7 +49,7 @@
           <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
             <ul class="navbar-nav  ">
               <li class="nav-item ">
-                <a class="nav-link" href="index.html">Biografie<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">Over Gerard<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="bas.html"> Basgitaarles</a>
@@ -91,11 +90,11 @@
             </div>
             <p>
 
-<b>Gerard Biersteker (1954)</b> begon zijn muzikale carrière als basgitarist en heeft zich in de loop der jaren professioneel ontwikkeld. Hij heeft op talloze podia gespeeld, waaronder het prestigieuze <b>North Sea Jazz Festival</b>.</p>
+<b>Gerard Biersteker (1954)</b> begon zijn muzikale carrière al jong als professioneel basgitarist en heeft zich in de loop der jaren in uitlopende muziekstijlen ontwikkeld. Hij heeft op talloze podia gespeeld, waaronder het prestigieuze <b>North Sea Jazz Festival</b>.</p>
 
 <p>Gedreven door zijn passie voor het schrijven en uitvoeren van eigen composities, heeft hij zich ook toegelegd op de akoestische gitaar. Dankzij zijn achtergrond als bassist heeft hij een geheel eigen speelstijl ontwikkeld, waarin ritme en melodie op unieke wijze samenkomen.</p>
 
-<p>Zijn nieuwe album, <b>When My Guitar Gently Speaks</b>, bevat instrumentale stukken voor akoestische gitaar en basgitaar en is te beluisteren op <b>Spotify, Apple Music en Deezer</b>.</p>                                                                              
+<p>Zijn laatste album, <b>When My Guitar Gently Speaks</b>, bevat instrumentale stukken voor akoestische gitaar en basgitaar en is te beluisteren op <b>Spotify, Apple Music en Deezer</b>.</p>                                                                              
 
 <p>Voor kleine theaters en huiskamerconcerten speelt Gerard voornamelijk eigen werk, afgewisseld met zorgvuldig geselecteerde covers in dezelfde stijl. Tijdens deze intieme optredens wordt hij ondersteund door bassist Peter Wesseling.</p>
           </div>
