--- a/muziek.html
+++ b/muziek.html
@@ -35,7 +35,7 @@
 
   <div class="hero_area">
     <!-- header section strats -->
-        <header class="header_section long_section px-0">
+    <header class="header_section long_section px-0">
       <nav class="navbar navbar-expand-lg custom_nav-container ">
         <a class="navbar-brand" href="index.html">
           <span>
@@ -50,7 +50,7 @@
           <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
             <ul class="navbar-nav  ">
               <li class="nav-item ">
-                <a class="nav-link" href="index.html">Biografie<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">Over Gerard<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="bas.html"> Basgitaarles</a>
@@ -71,9 +71,28 @@
     </header>
     <!-- end header section -->
   </div>
+ <section class="about_section layout_padding long_section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="img-box">
+            <iframe title="spotify" style="border-radius:12px" src="https://open.spotify.com/embed/artist/7pZkkmwH0dgSuPqY9kSd0V?utm_source=generator&theme=0" width="100%" height="650" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="detail-box">
+            <div class="heading_container">
+              <h2>
+                Muziek
+              </h2>
+            </div>
+      Hier vind je de muziek van mijn laatste album: When My Guitar Gently Speaks. Ook beschikbaar op Apple Music en Deezer. 
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-
-  <!-- blog section -->
 
   
   <!-- end blog section -->
