--- a/index.html
+++ b/index.html
@@ -76,11 +76,7 @@
   <section class="about_section layout_padding long_section">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
-          <div class="img-box">
-            <img src="images/port1.jpg" alt="">
-          </div>
-        </div>
+        
         <div class="col-md-6">
           <div class="detail-box">
             <div class="heading_container">
@@ -97,6 +93,11 @@
 <p>Zijn laatste album, <b>When My Guitar Gently Speaks</b>, bevat instrumentale stukken voor akoestische gitaar en basgitaar en is te beluisteren op <b>Spotify, Apple Music en Deezer</b>.</p>                                                                              
 
 <p>Voor kleine theaters en huiskamerconcerten speelt Gerard voornamelijk eigen werk, afgewisseld met zorgvuldig geselecteerde covers in dezelfde stijl. Tijdens deze intieme optredens wordt hij ondersteund door bassist Peter Wesseling.</p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="img-box">
+            <img src="images/fotos.png" alt="">
           </div>
         </div>
       </div>
