--- a/akoestisch.html
+++ b/akoestisch.html
@@ -77,11 +77,7 @@
   <section class="about_section layout_padding long_section">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
-          <div class="img-box">
-            <img src="images/ak.png" alt="">
-          </div>
-        </div>
+        
         <div class="col-md-6">
           <div class="detail-box">
             <div class="heading_container">
@@ -107,9 +103,14 @@
               </h2>
             
             <p>Wil je meer informatie of een <b>vrijblijvende proefles?</b><br>
-              Stuur mij hier een bericht of bel: <b>06 38 65 84 11</b>‬.</p>
+              Stuur mij een mail, een bericht of bel: <b>06 38 65 84 11</b>‬.</p>
 
 <p>De lessen vinden plaats in mijn <b>thuisstudio in Butterhuizen, Heerhugowaard</b>. Ook goed bereikbaar vanuit <b>Alkmaar en Langedijk</b>.</p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="img-box">
+            <img src="images/ak.png" alt="">
           </div>
         </div>
       </div>
