--- a/muziek.html
+++ b/muziek.html
@@ -74,20 +74,22 @@
  <section class="about_section layout_padding long_section">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
-          <div class="img-box">
-            <iframe title="spotify" style="border-radius:12px" src="https://open.spotify.com/embed/artist/7pZkkmwH0dgSuPqY9kSd0V?utm_source=generator&theme=0" width="100%" height="650" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="detail-box">
+    
+
+            <div class="col-md-6">
+              <div class="detail-box">
             <div class="heading_container">
               <h2>
                 Muziek
               </h2>
             </div>
-      Hier vind je de muziek van mijn laatste album: When My Guitar Gently Speaks. Ook beschikbaar op Apple Music en Deezer. 
+      <p>Hier vind je de muziek van mijn laatste album: When My Guitar Gently Speaks (Ook beschikbaar op Apple Music en Deezer) en twee akoestische covers. </p>
           </div>
+          <div class="img-box">
+            <iframe title="spotify" style="border-radius:12px" src="https://open.spotify.com/embed/artist/7pZkkmwH0dgSuPqY9kSd0V?utm_source=generator&theme=0" width="100%" height="650" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/1YCt0IrT7mk?si=LFp9au_cvgZ3sUEB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/B5V-aKtD-Qg?si=Ntlfmgbef9ZQRZ_l" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              </div>
         </div>
       </div>
     </div>
