--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <link rel="icon" href="images/fevicon.png" type="image/gif" />
+  <link rel="icon" href="images/favicon.ico" type="image/gif" />
   <meta name="keywords" content="" />
-  <meta name="description" content="" />
+  <meta name="description" content="🎸 Bas- en Akoestische Gitaar. Professionele muziekles in Heerhugowaard" />
   <meta name="author" content="" />
 
-  <title>Biografie - Gerard Biersteker</title>
+  <title>Gerard Biersteker</title>
 
 
   <!-- bootstrap core css -->
