--- a/akoestisch.html
+++ b/akoestisch.html
@@ -9,11 +9,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
   <link rel="icon" href="images/favicon.ico" type="image/gif" />
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
+  <meta name="keywords" content="Akoestische gitaarles, muziekles, Heerhugowaard, Langedijk, Alkmaar" />
+  <meta name="description" content="Muziekles is een investering in jezelf waar je een leven lang plezier van hebt. Lessen zijn één-op-één, duren langer dan bij een muziekschool." />
   <meta name="author" content="" />
 
-  <title>Les: Akoestische Gitaar - Gerard Biersteker</title>
+  <title>Akoestische Gitaarles in Heerhugowaard</title>
 
 
   <!-- bootstrap core css -->
