--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
         <div class="col-md-6">
           <div class="img-box">
-            <img src="images/fotos_klein.png" alt="">
+            <img src="images/fotos_klein2.png" alt="">
           </div>
         </div>
       </div>
