--- a/bas.html
+++ b/bas.html
@@ -110,7 +110,11 @@ In de afgelopen jaren heb ik gemerkt dat mijn leerlingen het als zeer motiverend
 
 <p>De lessen vinden plaats in mijn <b>thuisstudio in Butterhuizen, Heerhugowaard</b>. Ook goed bereikbaar vanuit <b>Alkmaar en Langedijk</b>.</p>
           </div>
+          
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/2TyLzyEvE08?si=98HC6TcoxthsxuvY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Cqe_i2I_vHE?si=sLrNnLt_ios8eOoM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
+        
         <div class="col-md-6">
           <div class="img-box">
             <img src="images/basgitaar2.png" alt="">
