--- a/akoestisch.html
+++ b/akoestisch.html
@@ -2,7 +2,7 @@
 <html lang="nl">
    <head>
       <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "0; url = https://gerardbiersteker.nl/akoestisch/" />
+      <meta http-equiv = "refresh" content = "0; url = https://gerardbiersteker.nl/akoestisch.html" />
    </head>
    <body>
       <p>Doorverwijzen naar nieuwe pagina..</p>
