--- a/akoestisch.html
+++ b/akoestisch.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="nl">
    <head>
-      <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "0; url = https://gerardbiersteker.nl/akoestisch.html" />
+      <title>Gitaarles in Heerhugowaard</title>
+      <meta http-equiv = "refresh" content = "0; url = https://gerardbiersteker.nl/gitaarles.html" />
    </head>
    <body>
       <p>Doorverwijzen naar nieuwe pagina..</p>
