--- a/bas.html
+++ b/bas.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
    <head>
-      <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "0; url = https://gerardbiersteker.nl/basles/" />
+      <title>Basgitaarles Heerhugowaard</title>
+      <meta http-equiv = "refresh" content = "0; url = https://gerardbiersteker.nl/basles.html" />
    </head>
    <body>
       <p>Redirecting to another URL</p>
