--- a/gitaarles.html
+++ b/gitaarles.html
@@ -13,7 +13,7 @@
   <meta name="description" content="Muziekles is een investering in jezelf waar je een leven lang plezier van hebt. Lessen zijn één-op-één, duren langer dan bij een muziekschool." />
   <meta name="author" content="" />
 
-  <title>Akoestische Gitaarles in Heerhugowaard</title>
+  <title>Gitaarles Heerhugowaard</title>
 
 
   <!-- bootstrap core css -->
@@ -56,7 +56,7 @@
                 <a class="nav-link" href="bas.html"> Basgitaarles</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="akoestisch.html">Akoestische gitaarles</a>
+                <a class="nav-link" href="gitaarles.html">Akoestische gitaarles</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="muziek.html">Muziek</a>
