--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a class="nav-link" href="basles.html"> Basgitaarles</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="akoestisch.html">Akoestische gitaarles</a>
+                <a class="nav-link" href="gitaarles.html">Akoestische gitaarles</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="muziek.html">Muziek</a>
