--- a/gitaarles.html
+++ b/gitaarles.html
@@ -98,10 +98,14 @@
 
 
             
-            <h2>
-                Proefles?
+      <h2>
+                Kosten
               </h2>
             
+            <p>Gitaarles kost 60,- euro per maand, met elke week een les van drie kwartier.</p>
+                      <h2>
+                Proefles?
+              </h2>
             <p>Wil je meer informatie of een <b>vrijblijvende proefles?</b><br>
               Stuur mij een mail, een bericht of bel: <b>06 38 65 84 11</b>‬.</p>
 
