--- a/basles.html
+++ b/basles.html
@@ -105,7 +105,8 @@ In de afgelopen jaren heb ik gemerkt dat mijn leerlingen het als zeer motiverend
                 Kosten
               </h2>
             
-            <p>Basles kost 60,- euro per maand, met elke week een les van drie kwartier.</p>
+            <p>Basles kost 70 euro per maand, met elke week een les van drie kwartier.</p>
+            <p>Scholieren, studenten en houders van een DijkenwaardPas krijgen 10 euro korting. </p>
             
             <h2>
                 Proefles?
