--- a/gitaarles.html
+++ b/gitaarles.html
@@ -102,7 +102,8 @@
                 Kosten
               </h2>
             
-            <p>Gitaarles kost 60,- euro per maand, met elke week een les van drie kwartier.</p>
+            <p>Gitaarles kost 70 euro per maand, met elke week een les van drie kwartier.</p>
+            <p>Scholieren, studenten en houders van een DijkenwaardPas ontvangen 10 euro korting. </p>
                       <h2>
                 Proefles?
               </h2>
