--- a/basles.html
+++ b/basles.html
@@ -106,7 +106,7 @@ In de afgelopen jaren heb ik gemerkt dat mijn leerlingen het als zeer motiverend
               </h2>
             
             <p>Basles kost 70 euro per maand, met elke week een les van drie kwartier.</p>
-            <p>Scholieren, studenten en houders van een DijkenwaardPas krijgen 10 euro korting. </p>
+            <p>Scholieren, studenten en houders van een DijkenwaardPas ontvangen 10 euro korting. </p>
             
             <h2>
                 Proefles?
